--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <tr>
             <td><img class="tablkep" src="kepek/haz1.jpg" alt="ház1" title="Gépjármű beálló"></td>
             <td><img class="tablkep" src="kepek/haz2.jpg" alt="ház2" title="Bejárat"></td>
-            <td><img class="tablkep" src="kepek/haz3.jpg" alt="ház3" title="Ház utcafrontról"></td>
+            <td><img class="tablkep" src="kepek/kirandulas.gif" alt="kirandulas" title="Ház utcafrontról"></td>
             <td><img class="tablkép" src="kepek/haz4.jpg" alt="ház4" title="Udvar"></td>
+            <td><img class="tablkép" src="kepek/kishegy.jpg" alt="kishegy" title="Szép látvány"></td>
         </tr>
     </table>
     <p class="sorkizart"><span>A ház legalább két éjszakára foglalható több időre nem!</span></p>
@@ -76,9 +77,9 @@
         <img id="kirkep" src="kepek/kirandulas.gif" alt="Túrázók">
         <p>Programajánló:</p>
         <ol>
-            <li>10 túra a Felső-Mátrába</li>
-            <li>Kirándulástippek a Mátrába</li>
-            <li>Adreanilin Park Mátrafüred</li>
+            <li><a href="http://matraszentimre.hu/turaajanlatok/10-tura-a-felso-matraban">A túra a Felső-Mátrába</a></li>
+            <li><a href="https://kirandulastippek.hu/matra">Kirándulástippek a Mátrába</a></li>
+            <li><a href="https://www.adrenalin-park.hu/"> Park Mátrafüred</a></li>
         </ol>
         <hr>
 </body>
